Fix newbb forum category collapse

--- a/style.css
+++ b/style.css
@@ -313,8 +313,10 @@ ul.tdm-new-download-block li:last-child{border-bottom: none;}
 .newbb-menu{}
 .newbb-header-icons{}
 .newbb-header-icons div{margin-bottom: 10px;}
-.xoops-newbb-forum-list{}
-.xoops-newbb-forum-list a.pull-right{margin-left: 5px}
+.xoops-newbb-category-list{}
+.xoops-newbb-category-list a.pull-right{margin-left: 5px}
+.xoops-newbb-list-foruns{border-bottom: 1px solid #EAEAEA; padding-bottom: 5px;}
+.xoops-newbb-list-foruns:last-child{border-bottom: none;}
 
 .xoops-mewbb-forum-title{}
 .xoops-mewbb-forum-title a.btn{color: #FFF;}
